# endstone-mapdisplays

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: autorelease.yaml
readme_resources/: mapdisplays_idle.webm
src/endstone_mapdisplays/: __init__.py  idle.webm  main.py  mapdisplays_states.pyi  states.py
src/endstone_mapdisplays/resources/: mapdisplays_loading.webm
src/mapdisplays_states/: idle_state.rs  lib.rs
