[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-mapdisplays"
version = "0.1.0"
description = "(Kind of) like WebDisplays"
authors = [
    { name = "niko-at-chalupa"}
]
dependencies = [
    "numpy",
    "av",
    "opencv-python",
    "yt-dlp",
]

[project.entry-points."endstone"]
mapdisplays = "endstone_mapdisplays:EntryForPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_mapdisplays"]
