[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-mapdisplays"
version = "0.2.1"
description = "Server-local video & image display system for Endstone (map-based)"
authors = [
    { name = "niko-at-chalupa" }
]
dependencies = [
    "numpy",
    "av",
    "Pillow",
    "yt-dlp",
]

[project.entry-points."endstone"]
mapdisplays = "endstone_mapdisplays:EntryForPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_mapdisplays"]

